# halomaker-python

./: .gitignore  CATALOG_FORMAT.md  GasMaker.py  HaloMaker.py  README.md  README_KOR.md  RELEASE_INVENTORY.md  SSP_MODELS.md  WHATS_NEW.md  build.sh  clean_runtime.sh  compute_adaptahop.f90  compute_adaptahop.pyf  compute_adaptahop_zoomin.f90  compute_adaptahop_zoomin.pyf  compute_halo_props.py  compute_neiKDtree_mod.py  environment.yml  grun.sh  halo_defs.py  hdf_output_example.py  input_output.py  num_rec.py  pyproject.toml  requirements.txt  run.sh  ssp_photometry.py
docs/: CATALOG_FORMAT.md  HPC_AND_BUILD.md  RELEASE_INVENTORY.md  WHATS_NEW.md
examples/: hdf_output_example.py  input_GasMaker.dat.example  input_HaloMaker.dat.example  inputfiles_GasMaker.dat.example  inputfiles_HaloMaker.dat.example
fortran/: compute_adaptahop.f90  compute_adaptahop.pyf
gasmaker/: __init__.py  catalog.py  config.py  geometry.py  pipeline.py  progress.py  test_gasmaker.py
gasmaker/readers/: __init__.py  base.py  rur.py
halomaker_data/: __init__.py
halomaker_data/ssp_tables/: README.md  __init__.py  bc03.npz  cb07.npz  fsps.npz
patch/: README.md
src/: chem_species.py  compute_halo_props.py  compute_neiKDtree_mod.py  halo_defs.py  input_output.py  ssp_photometry.py
src/gasmaker/: catalog.py  config.py  geometry.py  overlap.py  pipeline.py
src/gasmaker/readers/: base.py
tools/: _ssp_common.py  build_intel.sh  check_openmp_extension.sh  generate_bc03_table.py  generate_cb07_table.py  generate_fsps_table.py  prepare_ssp_tables.sh
