[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "halomaker-python"
version = "0.1.0"
description = "Python and Fortran implementation of HaloMaker / AdaptaHOP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.10",
    "numba>=0.61",
    "numpy>=1.26",
    "scipy>=1.14",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ssp-generation = [
    "fsps==0.4.7",
]

[tool.setuptools]
packages = ["halomaker_data", "halomaker_data.ssp_tables", "gasmaker", "gasmaker.readers"]
py-modules = [
    "HaloMaker",
    "GasMaker",
    "chem_species",
    "compute_halo_props",
    "compute_neiKDtree_mod",
    "halo_defs",
    "hdf_output_example",
    "input_output",
    "num_rec",
    "ssp_photometry",
]

[tool.setuptools.package-data]
"halomaker_data.ssp_tables" = ["*.npz"]
