[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "halomaker-python"
version = "0.1.0"
description = "Python and Fortran implementation of HaloMaker / AdaptaHOP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.10",
    "numba>=0.61",
    "numpy>=1.26",
    "scipy>=1.14",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ssp-generation = [
    "fsps==0.4.7",
]

[tool.setuptools]
packages = ["halomaker_data", "halomaker_data.ssp_tables", "gasmaker", "gasmaker.readers"]
# Internal flat modules under src/ are loaded via sys.path/PYTHONPATH for the
# HPC-style entry points; they are intentionally not pip-import targets.
py-modules = ["HaloMaker", "GasMaker"]

[tool.setuptools.package-dir]
gasmaker = "src/gasmaker"

[tool.setuptools.package-data]
"halomaker_data.ssp_tables" = ["*.npz"]
